--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "merge-stream": "^1.0.1"
   },
   "dependencies": {
+    "animate.css": "^3.5.2",
+    "jquery": "~3.2.1",
     "normalize.css": "~7.0.0",
-    "jquery": "~3.2.1"
+    "wowjs": "^1.1.3"
   }
 }
